--- a/frontend/src/components/MainNavigation/MainNavigation.module.css
+++ b/frontend/src/components/MainNavigation/MainNavigation.module.css
@@ -6,17 +6,59 @@
   justify-content: space-between;
 }
 
+.nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .list {
   display: flex;
   gap: 1rem;
 }
 
-.list a {
+.nav a {
   text-decoration: none;
   color: var(--color-primary-400);
 }
 
-.list a:hover,
-.list a.active {
+.nav a:hover,
+.nav a.active {
   color: var(--color-primary-800);
+}
+
+.auth {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.auth button {
+  padding: 0.5rem 1.5rem;
+  background-color: var(--color-gray-300);
+  color: var(--color-gray-800);
+  border-radius: 4px;
+  border: none;
+  font: inherit;
+  cursor: pointer;
+}
+
+.auth a {
+  padding: 0.5rem 1.5rem;
+  background-color: var(--color-gray-300);
+  color: var(--color-gray-800);
+  border-radius: 4px;
+}
+
+.auth button:hover,
+.auth button:active {
+  background-color: var(--color-primary-600);
+}
+
+.auth a:hover,
+.auth a:active {
+  background-color: var(--color-primary-600);
+  color: var(--color-gray-800);
 }
